--- a/biostatistics.html
+++ b/biostatistics.html
@@ -87,7 +87,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Durham, NC</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://foghorntherapeutics.applytojob.com/apply/f8yWkDWk4s/Head-Of-Biostatistics'>Head of Biostatistics - Foghorn Therapeutics - Career Page</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
@@ -117,7 +117,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://externaltalent-mskcc.icims.com/jobs/35964/principal-biotatistician---department-of-epidemiology-and-biostatistics/job'>Principal Biostatistician - Department of Epidemiology and ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>12 hours ago ... Experience of collaborative research (including creating and maintaining data 
 files, writing application programs within a statistical software, analyzing data,?...</p>
@@ -147,7 +147,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
+<h5><a href='https://tfscareers.workable.com/j/EE7AB7F098'>TFS - Jobs: Biostatistician, home or office based (m/w/d) - Apply online</a></h5> 
 <p><span class="badge badge-light">Hamburg, Germany</span></p>
 <p>Posted on: 2019-10-03</p>
 <hr/>
@@ -189,7 +189,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">North America United States  North America United States  North America United States  North America United States</span></p>
 <p>Posted on: 2019-09-30</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4441972002'>Job Application for Senior Biostatistician/Manager, Biostatistics at Myovant Sciences</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myovantsciences42/jobs/4441972002'>Job Application for Senior Biostatistician/Manager, Biostatistics at Myovant Sciences</a></h5> 
 <p><span class="badge badge-light">Brisbane</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
@@ -201,7 +201,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://www.csulb.edu/academic-affairs/faculty-affairs/assistant-professor-of-biological-anthropology-2578'>Assistant Professor of Biological Anthropology 2578 | California State University, Long Beach</a></h5> 
+<h5><a href='http://www.csulb.edu/academic-affairs/faculty-affairs/assistant-professor-of-biological-anthropology-2578'>Assistant Professor of Biological Anthropology 2578 | California State University, Long Beach</a></h5> 
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on:: 2019-09-23</p>
 <hr/>
@@ -241,7 +241,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Maine, United States</span></p>
 <p>Posted on: 2019-09-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/o2rAafwX'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-09-13</p>
 <hr/>
@@ -281,7 +281,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light">Darmstadt, Germany</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/oOrAafwJ'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light">Milan Italy</span></p>
 <p>Posted on: 2019-09-07</p>
 <hr/>
@@ -400,7 +400,7 @@ of the Biostatistics department in the R&D Development organisation.</p>
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-08-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
+<h5><a href='https://jobs.jobvite.com/portola/job/o4aRafwZ'>Portola Pharmaceuticals Careers - Director, Biostatistics, Cardiovascular Programs</a></h5> 
 <p><span class="badge badge-light">South San Francisco, California</span></p>
 <p>Posted on: 2019-08-21</p>
 <hr/>
@@ -468,7 +468,7 @@ of focus, using the appropriate statistical and machine learning methodologies?.
 <p>Jul 21, 2019 ... JAX was voted among the top 15 ?Best Places to Work in Academia? in the United 
 States in a poll conducted by The Scientist magazine! Our Values: INTEGRITY?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o2rAafwX&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nlwb1Lwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=o2rAafwX&__jvst=Employee+Referral&__jvsd=s8eovhw1&__jvsc=Twitter&bid=nlwb1Lwj'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-08-01</p>
 <hr/>
